# GRAIL-Heart

./: .dockerignore  .gitignore  Dockerfile  README.md  ablation_study.py  analyze_results.py  benchmark_comparison.py  check_checkpoint.py  docker-compose.yml  enhanced_inference.py  evaluate_test.py  export_cytoscape.py  inference.py  inverse_inference.py  pyproject.toml  test_data.py  test_imports.py  train.py  train_cv.py  validate_external.py
.streamlit/: config.toml
app/: app.py  requirements.txt
app/.streamlit/: config.toml
configs/: ablation.yaml  cv.yaml  default.yaml  validation.yaml
docs/: METHODOLOGY.md  RESULTS.md
huggingface/: .gitattributes  Dockerfile  README.md  app.py  deploy_to_hf.ps1  deploy_to_hf.sh  prepare_demo_data.py  requirements.txt
outputs/: config.yaml  test_metrics.yaml
outputs/ablation/: ablation_results_20260109_220415.csv  ablation_results_20260110_161027.csv  ablation_results_20260110_161641.csv  ablation_results_20260110_162302.csv  ablation_results_20260110_163433.csv  ablation_results_20260110_163942.csv  ablation_results_20260110_164353.csv  ablation_results_20260110_171433.csv  ablation_results_20260110_171835.csv  ablation_results_20260110_172436.csv  combined_results.csv
outputs/analysis/: AX_network.json  LA_network.json  LV_network.json  RA_network.json  RV_network.json  SP_network.json  lr_comparison.csv
outputs/benchmark/: benchmark_results_20260110_172956.csv  benchmark_results_20260110_173729.csv  benchmark_results_20260110_174149.csv
outputs/benchmark_final/: benchmark_results_20260111_073044.csv
outputs/cv_20260102_172023/: config.yaml  fold_metrics_partial.yaml
outputs/cv_20260102_172459/: config.yaml
outputs/cv_20260102_172524/: cv_results.json  cv_results.yaml  fold_metrics_partial.yaml
outputs/cv_20260102_172839/: config.yaml  cv_results.json  cv_results.yaml  fold_metrics_partial.yaml
outputs/cv_20260102_173121/: config.yaml
outputs/cv_20260102_180718/: cv_results.json  cv_results.yaml  fold_metrics_partial.yaml
outputs/cv_20260102_233408/: cv_results.json  cv_results.yaml  fold_metrics_partial.yaml
outputs/cv_20260103_233936/: cv_results.json  cv_results.yaml  fold_metrics_partial.yaml
outputs/cv_20260110_201121/: config.yaml  cv_results.json  cv_results.yaml  fold_metrics_partial.yaml
outputs/cv_20260207_235822/: config.yaml  cv_results.json  cv_results.yaml  fold_metrics_partial.yaml
outputs/cytoscape/: README.md  grail_heart_explorer.html  index.html
outputs/enhanced_analysis/: analysis_report.txt
outputs/final_model/: config.yaml  test_metrics.yaml
outputs/inverse_analysis/: inverse_modelling_summary.json
scripts/: build_explorer.py  generate_network_data.py
(+131 files in other folders)
