[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grail-heart"
version = "1.0.0"
description = "Graph-based Reconstruction of Artificial Intercellular Links for Cardiac Spatial Transcriptomics"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GRAIL-Heart Team", email = "grail-heart@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "single-cell",
    "spatial-transcriptomics", 
    "ligand-receptor",
    "cardiac",
    "graph-neural-network",
    "cell-communication",
    "inverse-modeling"
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "scanpy>=1.9.0",
    "anndata>=0.9.0",
    "numpy>=1.21.0",
    "pandas>=1.5.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "networkx>=2.8.0",
    "tqdm>=4.64.0",
    "PyYAML>=6.0",
    "omnipath>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
app = [
    "streamlit>=1.28.0",
    "plotly>=5.15.0",
]
all = [
    "grail-heart[dev,app]"
]

[project.urls]
Homepage = "https://github.com/tumo505/GRAIL-Heart"
Documentation = "https://github.com/tumo505/GRAIL-Heart/blob/main/docs/METHODOLOGY.md"
Repository = "https://github.com/tumo505/GRAIL-Heart"
"Bug Tracker" = "https://github.com/tumo505/GRAIL-Heart/issues"
"Interactive Explorer" = "https://tumo505.github.io/GRAIL-Heart/outputs/cytoscape/index.html"

[project.scripts]
grail-heart = "grail_heart.cli:main"

[project.entry-points."console_scripts"]
grail-heart-app = "app.app:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["grail_heart*"]

[tool.setuptools.package-data]
grail_heart = ["data/*.csv", "data/*.json"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=grail_heart --cov-report=term-missing"
